engine/src/abi/onebeat_abi.h

/* ------------------------------------------------------------------------- */
/* Status codes and errors (ADR-002 §2, error taxonomy: docs/errors.md)        */
/* ------------------------------------------------------------------------- */

typedef enum ob_status {
  OB_OK = 0,
  OB_ERR_INVALID_ARGUMENT = 1,
  OB_ERR_OUT_OF_MEMORY = 2,
  OB_ERR_DEVICE_UNAVAILABLE = 3,
  OB_ERR_DEVICE_FORMAT_UNSUPPORTED = 4,
  OB_ERR_ALREADY_RUNNING = 5,
  OB_ERR_NOT_RUNNING = 6,
  OB_ERR_QUEUE_FULL = 7,
  OB_ERR_FILE_NOT_FOUND = 8,
  OB_ERR_FILE_UNSUPPORTED = 9,
  OB_ERR_INTERNAL = 10
} ob_status;
/* ------------------------------------------------------------------------- */
/* Engine lifecycle (ADR-002 §2)                                              */
/* ------------------------------------------------------------------------- */

typedef struct ob_engine ob_engine;
typedef struct ob_instance_info {
  uint32_t struct_size;
  uint32_t instance_id;
  uint32_t format; /* ob_plugin_format */
  uint32_t flags;  /* OB_INSTANCE_FLAG_* */
  uint32_t param_count;
  uint32_t reserved;
  char plugin_id[128];
  char name[128];
  char vendor[128];
  char path[512];
} ob_instance_info;
typedef struct ob_param_info {
  uint32_t struct_size;
  uint32_t instance_id;
  uint32_t param_id;
  uint32_t flags;
  double min_value;
  double max_value;
  double default_value;
  double value;
  char name[128];
  char module[128];
  char display[128];
} ob_param_info;
/* Main/UI thread. May block while the helper launches and the plug-in loads.
 * Strings are copied before return. v0.2 has one flat instrument slot. */
OB_API ob_status ob_engine_instance_add(ob_engine* engine, const char* utf8_bundle_path,
                                        const char* utf8_plugin_id);
/* Main/UI thread. May block while the helper exits. Restores the built-in. */
OB_API ob_status ob_engine_instance_remove(ob_engine* engine, uint32_t instance_id);
/* Main/UI thread. Never blocks. The v0.2 flat list contains zero or one row. */
OB_API int32_t ob_engine_instance_count(ob_engine* engine);
OB_API ob_status ob_engine_instance_at(ob_engine* engine, int32_t index,
                                       ob_instance_info* out_info);
/* Main/UI thread. May block briefly on the helper control channel. */
OB_API ob_status ob_engine_param_at(ob_engine* engine, uint32_t instance_id, int32_t index,
                                    ob_param_info* out_info);
/* Main/UI thread. May block briefly on helper window creation. */
OB_API ob_status ob_engine_instance_editor_open(ob_engine* engine, uint32_t instance_id);
OB_API ob_status ob_engine_instance_editor_close(ob_engine* engine, uint32_t instance_id);
/* Main/UI thread. Replaces a failed helper and restores its last state. */
OB_API ob_status ob_engine_instance_restart(ob_engine* engine, uint32_t instance_id);
/* Main/UI thread. May block on filesystem and opaque plug-in state I/O. */
OB_API ob_status ob_engine_session_save(ob_engine* engine, const char* utf8_path);
OB_API ob_status ob_engine_session_load(ob_engine* engine, const char* utf8_path);
/* ------------------------------------------------------------------------- */
/* Project instruments (added in ABI 1.5, OB-3-07)                           */
/* ------------------------------------------------------------------------- */

typedef struct ob_instrument_info {
  uint32_t struct_size;
  int32_t order;
  uint32_t flags; /* bit 0: muted; bit 1: selected */
  uint32_t affected_pattern_count;
  uint32_t affected_clip_count;
  uint32_t affected_note_count;
  char id[32];
  char name[128];
  char color[8];
  char plugin_id[128];
  char plugin_name[128];
  char plugin_vendor[128];
  char plugin_path[512];
} ob_instrument_info;
/* Main/UI thread. The rows are project-global and ordered by `order`. */
OB_API int32_t ob_engine_instrument_count(ob_engine* engine);
OB_API ob_status ob_engine_instrument_at(ob_engine* engine, int32_t index,
                                         ob_instrument_info* out_info);
OB_API ob_status ob_engine_instrument_select(ob_engine* engine, const char* utf8_instrument_id);
OB_API ob_status ob_engine_instrument_rename(ob_engine* engine, const char* utf8_instrument_id,
                                             const char* utf8_name);
OB_API ob_status ob_engine_instrument_recolor(ob_engine* engine, const char* utf8_instrument_id,
                                              const char* utf8_color);
OB_API ob_status ob_engine_instrument_set_muted(ob_engine* engine, const char* utf8_instrument_id,
                                                int32_t muted);
OB_API ob_status ob_engine_instrument_reorder(ob_engine* engine, const char* utf8_instrument_id,
                                              int32_t order);
OB_API ob_status ob_engine_instrument_replace(ob_engine* engine, const char* utf8_instrument_id,
                                              const char* utf8_bundle_path,
                                              const char* utf8_plugin_id);