app/lib/src/engine/generated/onebeat_bindings.dart


  late final _ob_engine_instance_addPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_instance_add');
  late final _ob_engine_instance_add = _ob_engine_instance_addPtr
      .asFunction<
        int Function(
          ffi.Pointer<ob_engine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ob_status ob_engine_instance_remove(
    ffi.Pointer<ob_engine> engine,
    int instance_id,
  ) {
    return ob_status.fromValue(_ob_engine_instance_remove(engine, instance_id));
  }

  late final _ob_engine_instance_removePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<ob_engine>, ffi.Uint32)
        >
      >('ob_engine_instance_remove');
  late final _ob_engine_instance_remove = _ob_engine_instance_removePtr
      .asFunction<int Function(ffi.Pointer<ob_engine>, int)>();

  int ob_engine_instance_count(ffi.Pointer<ob_engine> engine) {
    return _ob_engine_instance_count(engine);
  }

  late final _ob_engine_instance_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ob_engine>)>>(
        'ob_engine_instance_count',
      );
  late final _ob_engine_instance_count = _ob_engine_instance_countPtr
      .asFunction<int Function(ffi.Pointer<ob_engine>)>();

  ob_status ob_engine_instance_at(
    ffi.Pointer<ob_engine> engine,
    int index,
    ffi.Pointer<ob_instance_info> out_info,
  ) {
    return ob_status.fromValue(_ob_engine_instance_at(engine, index, out_info));
  }

  late final _ob_engine_instance_atPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Int32,
            ffi.Pointer<ob_instance_info>,
          )
        >
      >('ob_engine_instance_at');
  late final _ob_engine_instance_at = _ob_engine_instance_atPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, int, ffi.Pointer<ob_instance_info>)
      >();

  ob_status ob_engine_param_at(
    ffi.Pointer<ob_engine> engine,
    int instance_id,
    int index,
    ffi.Pointer<ob_param_info> out_info,
  ) {
    return ob_status.fromValue(
      _ob_engine_param_at(engine, instance_id, index, out_info),
    );
  }

  late final _ob_engine_param_atPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Uint32,
            ffi.Int32,
            ffi.Pointer<ob_param_info>,
          )
        >
      >('ob_engine_param_at');
  late final _ob_engine_param_at = _ob_engine_param_atPtr
      .asFunction<
        int Function(
          ffi.Pointer<ob_engine>,
          int,
          int,
          ffi.Pointer<ob_param_info>,
        )
      >();

  ob_status ob_engine_instance_editor_open(
    ffi.Pointer<ob_engine> engine,
    int instance_id,
  ) {
    return ob_status.fromValue(
      _ob_engine_instance_editor_open(engine, instance_id),
    );
  }

  late final _ob_engine_instance_editor_openPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<ob_engine>, ffi.Uint32)
        >
      >('ob_engine_instance_editor_open');
  late final _ob_engine_instance_editor_open =
      _ob_engine_instance_editor_openPtr
          .asFunction<int Function(ffi.Pointer<ob_engine>, int)>();

  ob_status ob_engine_instance_editor_close(
    ffi.Pointer<ob_engine> engine,
    int instance_id,
  ) {
    return ob_status.fromValue(
      _ob_engine_instance_editor_close(engine, instance_id),
    );
  }

  late final _ob_engine_instance_editor_closePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<ob_engine>, ffi.Uint32)
        >
      >('ob_engine_instance_editor_close');
  late final _ob_engine_instance_editor_close =
      _ob_engine_instance_editor_closePtr
          .asFunction<int Function(ffi.Pointer<ob_engine>, int)>();

  ob_status ob_engine_instance_restart(
    ffi.Pointer<ob_engine> engine,
    int instance_id,
  ) {
    return ob_status.fromValue(
      _ob_engine_instance_restart(engine, instance_id),
    );
  }

  late final _ob_engine_instance_restartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<ob_engine>, ffi.Uint32)
        >
      >('ob_engine_instance_restart');
  late final _ob_engine_instance_restart = _ob_engine_instance_restartPtr
      .asFunction<int Function(ffi.Pointer<ob_engine>, int)>();

  ob_status ob_engine_session_save(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
  ) {
    return ob_status.fromValue(_ob_engine_session_save(engine, utf8_path));
  }

  late final _ob_engine_session_savePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_session_save');
  late final _ob_engine_session_save = _ob_engine_session_savePtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ffi.Char>)
      >();

  ob_status ob_engine_session_load(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
  ) {
    return ob_status.fromValue(_ob_engine_session_load(engine, utf8_path));
  }

  late final _ob_engine_session_loadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_session_load');
  late final _ob_engine_session_load = _ob_engine_session_loadPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ffi.Char>)
      >();

  int ob_engine_instrument_count(ffi.Pointer<ob_engine> engine) {
    return _ob_engine_instrument_count(engine);
  }

  late final _ob_engine_instrument_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ob_engine>)>>(
        'ob_engine_instrument_count',
      );
  late final _ob_engine_instrument_count = _ob_engine_instrument_countPtr
      .asFunction<int Function(ffi.Pointer<ob_engine>)>();

  ob_status ob_engine_instrument_at(
    ffi.Pointer<ob_engine> engine,
    int index,
    ffi.Pointer<ob_instrument_info> out_info,
  ) {
    return ob_status.fromValue(
      _ob_engine_instrument_at(engine, index, out_info),
    );
  }

  late final _ob_engine_instrument_atPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Int32,
            ffi.Pointer<ob_instrument_info>,
          )
        >
      >('ob_engine_instrument_at');
  late final _ob_engine_instrument_at = _ob_engine_instrument_atPtr
      .asFunction<
        int Function(
          ffi.Pointer<ob_engine>,
          int,
          ffi.Pointer<ob_instrument_info>,
        )
      >();

  ob_status ob_engine_instrument_select(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_instrument_id,
  ) {
    return ob_status.fromValue(
      _ob_engine_instrument_select(engine, utf8_instrument_id),
    );
  }

  late final _ob_engine_instrument_selectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_instrument_select');
  late final _ob_engine_instrument_select = _ob_engine_instrument_selectPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ffi.Char>)
      >();

  ob_status ob_engine_instrument_rename(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_instrument_id,
    ffi.Pointer<ffi.Char> utf8_name,
  ) {
    return ob_status.fromValue(
      _ob_engine_instrument_rename(engine, utf8_instrument_id, utf8_name),
    );
  }

  late final _ob_engine_instrument_renamePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_instrument_rename');
  late final _ob_engine_instrument_rename = _ob_engine_instrument_renamePtr
      .asFunction<
        int Function(
          ffi.Pointer<ob_engine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ob_status ob_engine_instrument_recolor(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_instrument_id,
    ffi.Pointer<ffi.Char> utf8_color,
  ) {
    return ob_status.fromValue(
      _ob_engine_instrument_recolor(engine, utf8_instrument_id, utf8_color),
    );
  }

  late final _ob_engine_instrument_recolorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_instrument_recolor');
  late final _ob_engine_instrument_recolor = _ob_engine_instrument_recolorPtr
      .asFunction<
        int Function(
          ffi.Pointer<ob_engine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ob_status ob_engine_instrument_set_muted(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_instrument_id,
    int muted,
  ) {
    return ob_status.fromValue(
      _ob_engine_instrument_set_muted(engine, utf8_instrument_id, muted),
    );
  }

  late final _ob_engine_instrument_set_mutedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('ob_engine_instrument_set_muted');
  late final _ob_engine_instrument_set_muted =
      _ob_engine_instrument_set_mutedPtr
          .asFunction<
            int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ffi.Char>, int)
          >();

  ob_status ob_engine_instrument_reorder(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_instrument_id,
    int order,
  ) {
    return ob_status.fromValue(
      _ob_engine_instrument_reorder(engine, utf8_instrument_id, order),
    );
  }

  late final _ob_engine_instrument_reorderPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('ob_engine_instrument_reorder');
  late final _ob_engine_instrument_reorder = _ob_engine_instrument_reorderPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ffi.Char>, int)
      >();

  ob_status ob_engine_instrument_replace(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_instrument_id,
    ffi.Pointer<ffi.Char> utf8_bundle_path,
    ffi.Pointer<ffi.Char> utf8_plugin_id,
  ) {
    return ob_status.fromValue(
      _ob_engine_instrument_replace(
        engine,
        utf8_instrument_id,
        utf8_bundle_path,
        utf8_plugin_id,
      ),
    );
  }

  late final _ob_engine_instrument_replacePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_instrument_replace');
  late final _ob_engine_instrument_replace = _ob_engine_instrument_replacePtr
      .asFunction<
        int Function(
          ffi.Pointer<ob_engine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();
